added nav and styled it

--- a/index.html
+++ b/index.html
@@ -1,9 +1,31 @@
 <!DOCTYPE html>
 <html>
+
 <head>
- <title>Watoto Kumi</title>   
+    <link href='https://fonts.googleapis.com/css?family=Old+Standard+TT:400,400italic' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="main.css">
+    <title>Watoto Kumi</title>
 </head>
+
 <body>
-    
+    <header>
+        <div id="title">
+            Watoto Kumi
+
+        </div>
+        <div id="nav">
+            <ul>
+                <li>Home</li>
+                <li>About us</li>
+                <li>Gallery</li>
+                <li>Stories</li>
+
+            </ul>
+
+        </div>
+
+    </header>
+
 </body>
+
 </html>
