added and styled gallery1

--- a/index.html
+++ b/index.html
@@ -42,8 +42,11 @@
     <img src="Assets/Immediate-Needs2.png"><br>
     <img src="Assets/sidebanner-catalog.png"><br>    
     </div>
-    
-    
+    </div>
+    <div id="gallery1">
+    <img id="one" src="Assets/anne2.jpg">
+    <img id="one" src="Assets/children-580x575.jpg">
+    <img id="one" src="Assets/cooking2.jpg">
     </div>
 
 
