added and styled gallery2

--- a/index.html
+++ b/index.html
@@ -45,8 +45,14 @@
     </div>
     <div id="gallery1">
     <img id="one" src="Assets/anne2.jpg">
-    <img id="one" src="Assets/children-580x575.jpg">
+    <img id="one" src="Assets/porridge2.jpg">
     <img id="one" src="Assets/cooking2.jpg">
+    </div>
+    <div id="gallery2">
+    <img id="two" src="Assets/kids.JPG">
+    <img id="two" src="Assets/08.jpg">
+    <img id="two" src="Assets/schoolporridge.jpg">
+    
     </div>
 
 
