added content to stories div

--- a/index.html
+++ b/index.html
@@ -54,7 +54,15 @@
     <img id="two" src="Assets/schoolporridge.jpg">
     
     </div>
+<div id="stories">
+    <button>The Chicken and The Snake</button><br>
+    <button>Alibaba and the 40 Thieves</button><br>
+    <button>Harry Potter and the Socere's Stone </button><br>
+    <button> Snow White and the seven dwarfs</button><br>
+    <button>The gods must have gone to seep</button><br>
+    <button>The Boy who Stole Christmas</button><br>
 
+    </div>
 
 </body>
 
