--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
     
     </div>
 <div id="stories">
-    <button>The Chicken and The Snake</button><br>
-    <button>Alibaba and the 40 Thieves</button><br>
-    <button>Harry Potter and the Socere's Stone </button><br>
-    <button> Snow White and the seven dwarfs</button><br>
-    <button>The gods must have gone to seep</button><br>
-    <button>The Boy who Stole Christmas</button><br>
+    <button>The Chicken and The Snake</button><br><br>
+    <button>Alibaba and the 40 Thieves</button><br><br>
+    <button>Harry Potter and the Socere's Stone </button><br><br>
+    <button> Snow White and the seven dwarfs</button><br><br>
+    <button>The gods must have gone to seep</button><br><br>
+    <button>The Boy who Stole Christmas</button><br><br>
 
     </div>
 
