linked the navs to divs

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         </div>
         <div id="nav">
             <ul>
-                <li>Home</li>
-                <li>About us</li>
-                <li>Gallery</li>
-                <li>Stories</li>
+                <a href="#container1"><li>Home</li></a>
+                <a href="#container2"><li>About us</li></a>
+               <a href="#galleria"> <li>Gallery</li></a>
+                <a href="#stories"><li>Stories</li></a>
 
             </ul>
 
@@ -43,6 +43,7 @@
     <img src="Assets/sidebanner-catalog.png"><br>    
     </div>
     </div>
+    <div id="galleria">
     <div id="gallery1">
     <img id="one" src="Assets/anne2.jpg">
     <img id="one" src="Assets/porridge2.jpg">
@@ -54,6 +55,7 @@
     <img id="two" src="Assets/schoolporridge.jpg">
     
     </div>
+        </div>
 <div id="stories">
     <button>The Chicken and The Snake</button><br><br>
     <button>Alibaba and the 40 Thieves</button><br><br>
